# DEMO_TEST_REPO

./: .gitignore  GITHUB_SETUP.md  README.md  pyproject.toml  run_demo.py
.github/: pr-validation.yml
.github/workflows/: pr-validation.yml
src/: calculator.py
tests/: test_calculator.py  test_calculator_edge_cases.py  test_calculator_regression.py  test_ower.py  test_pow.py  test_power.py
tests/test folders/: test_pow.py
tests/tests-sub-folder-check/: test_calculator_regression.py
