[project]
name = "demo-test-repo"
version = "0.1.0"
description = "A simple demo repository for PR validation system testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]